updates paragraph spacing, fixes blog date CSS

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,21 +1,22 @@
+#content {
+    position: relative;
+}
+
 #content > h2 {
     position: relative;
     z-index: 0;
-    height: 36px;
     box-sizing: border-box;
-    line-height: calc(36px - 0.6em);
 }
 
 #content > h2 + p {
-    position: relative;
+    position: absolute;
     z-index: 1;
-    top: -36px;
-    float: right;
-    height: 36px;    
+    top: 20px;
+    right: 20px;
+    height: 36px;
+    line-height: 36px;
     padding: 0;
     margin: 0 1em 0 0;
     box-sizing: border-box;
-    line-height: 36px;    
     font-size: 12px;
-    color: #FFFFFF;
 }
