--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,7 @@
 
 html, body {
     height: 100%;
-    min-width: 600px;
+    min-width: 720px;
     padding: 0;
     margin: 0;
     font-family: Roboto, sans-serif;
@@ -83,7 +83,7 @@ body > section {
 }
 
 #content {
-    max-width: 700px;
+    max-width: 720px;
     min-height: calc(100% - 100px);
     margin: 0 auto;
     padding: 20px;
