--- a/src/css/manual.css
+++ b/src/css/manual.css
@@ -1,6 +1,6 @@
 #content {
     position: relative;
-    padding-left: 120px;
+    padding-left: 140px;
 }
 
 #content > ol:nth-child(1) {
